refactor: Reorganize documentation and update linting scope
- Moves the PRD.MD file into a new docs/ directory.

- Updates the Markdown linting workflow to only check files within the docs/ directory.

--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -17,5 +17,5 @@ jobs:
         uses: DavidAnson/markdownlint-cli2-action@v15
         with:
           globs: |
-            '**/*.{md,MD}'
+            'docs/**/*.{md,MD}'
             '!**/node_modules/**'
