feat: Implement strict mypy checks and resolve configuration type error

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,5 +4,5 @@ capture_directories:
   - /mnt/logs/archiver/atnr02-tds-fep/captures
 work_directories:
   input_directory: /var/tmp/alcp/input
-  active_directory: /var/tmp/alcp/active
+  current_directory: /var/tmp/alcp/current
   output_directory: /var/tmp/alcp/output
