--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main", "master" ]
 
 jobs:
-  mypy:
+  mypy-capture_only:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          pip install -r ./capture_only/offline/requirements-dev.txt
 
       - name: Run mypy script
         run: |
