Consistent naming for GitHub actions and associated scripts

--- a/.github/workflows/python_pylint.yml
+++ b/.github/workflows/python_pylint.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main", "master" ]
 
 jobs:
-  lint-capture_only:
+  python-lint-capture_only:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -26,4 +26,4 @@ jobs:
       - name: Run linter script
         run: |
           chmod +x ./scripts/lint.sh
-          ./scripts/lint.sh
+          ./scripts/python_pylint.sh
