Invoke scripts in GitHub workflows using explicit bash <script> syntax

--- a/.github/workflows/python_pylint.yml
+++ b/.github/workflows/python_pylint.yml
@@ -25,5 +25,4 @@ jobs:
 
       - name: Run linter script
         run: |
-          chmod +x ./scripts/lint.sh
-          ./scripts/python_pylint.sh
+          bash scripts/python_pylint.sh
