--- a/.github/workflows/markdown_lint.yml
+++ b/.github/workflows/markdown_lint.yml
@@ -3,8 +3,12 @@ name: Lint Markdown
 on:
   push:
     branches: [ main ]
+    paths:
+      - '**/docs/*.{md,MD}'
   pull_request:
     branches: [ main ]
+    paths:
+      - '**/docs/*.{md,MD}'
 
 jobs:
   lint:
@@ -17,5 +21,5 @@ jobs:
         uses: DavidAnson/markdownlint-cli2-action@v15
         with:
           globs: |
-            'docs/**/*.{md,MD}'
+            '**/docs/*.{md,MD}'
             '!**/node_modules/**'
