Make number of capture files and duration configurable

--- a/capture_only/online/etc/sysconfig/atn_lan_capture.env
+++ b/capture_only/online/etc/sysconfig/atn_lan_capture.env
@@ -7,5 +7,11 @@ NETWORK_INTERFACE=net3
 # Directory to store capture files (default: /archives/captures)
 ARCHIVE_DIR=/archives/captures
 
+# Duration of each capture file in seconds (default: 3600)
+CAPTURE_FILE_DURATION_SECS=3600
+
+# Maximum number of files in the 'dumpcap' ring buffer (default: 72)
+CAPTURE_NUM_CAPTURE_FILES=72
+
 # Retention days used by cleanup script (default: 7)
 RETENTION_DAYS=7
