Next iteration of the network capture and convert service

--- a/capture_convert/online/etc/sysconfig/atn_capture_convert.env
+++ b/capture_convert/online/etc/sysconfig/atn_capture_convert.env
@@ -7,11 +7,11 @@ NETWORK_INTERFACE="net3"
 # IP address to sniff
 RTCD_SNIFFED_ADDRESS="192.0.2.1"
 
+# Path to the rtcd_routerlog.awk script
+AWK_CONVERSION_SCRIPT="/opt/muac/rtcd_routerlog.awk"
+
 # Directory to store files in Airtel Router format
 ARCHIVE_DIR="/var/log/atn_capture"
 
-# Retention in days
+# File retention in days (used by cleanup script)
 RETENTION_DAYS=7
-
-# Path to the rtcd_routerlog.awk script
-AWK_CONVERSION_SCRIPT="/opt/muac/rtcd_routerlog.awk"
