Make the environment file required for the atn_capture service

--- a/capture_only/online/etc/sysconfig/atn_capture.env
+++ b/capture_only/online/etc/sysconfig/atn_capture.env
@@ -1,5 +1,6 @@
-# Example environment file for atn_lan_capture systemd service
-# Copy this to /etc/default/atn_lan_capture (owner root, mode 0644)
+# Example environment file for associated systemd service
+# Copy this to /etc/default/
+# Set permissions to 0644 with owner root
 
 # Network interface to capture on (default: net3)
 NETWORK_INTERFACE=net3
