Minor textual modications for the online capture_only implementaion

--- a/capture_only/online/etc/sysconfig/atn_capture.env
+++ b/capture_only/online/etc/sysconfig/atn_capture.env
@@ -1,12 +1,8 @@
 # Example environment file for associated systemd service
-# Copy this to /etc/default/
-# Set permissions to 0644 with owner root
+# Copy this file to /etc/sysconfig/ and set permissions to 0644 with owner root
 
 # Network interface to capture on (default: net3)
 NETWORK_INTERFACE=net3
-
-# Directory to store capture files (default: /archives/captures)
-ARCHIVE_DIR=/archives/captures
 
 # Duration of each capture file in seconds (default: 3600)
 CAPTURE_FILE_DURATION_SECS=3600
@@ -14,5 +10,8 @@ CAPTURE_FILE_DURATION_SECS=3600
 # Maximum number of files in the 'dumpcap' ring buffer (default: 72)
 CAPTURE_NUM_CAPTURE_FILES=72
 
-# Retention days used by cleanup script (default: 7)
+# Directory to store capture files (default: /archives/captures)
+ARCHIVE_DIR=/archives/captures/pcap
+
+# File retention days used by cleanup script (default: 7)
 RETENTION_DAYS=7
