Next iteration of online capture_convert implementation

--- a/capture_convert/online/etc/sysconfig/atn_capture_convert.env
+++ b/capture_convert/online/etc/sysconfig/atn_capture_convert.env
@@ -1,5 +1,5 @@
-# Environment file for atn_capture_convert
-# Place in /etc/sysconfig  set owner root:root, mode 0640
+# Example environment file for associated systemd service
+# Copy this file to /etc/sysconfig/ and set permissions to 0644 with owner root
 
 # Network interface to capture on
 NETWORK_INTERFACE="net3"
@@ -11,7 +11,7 @@ RTCD_SNIFFED_ADDRESS="192.0.2.1"
 AWK_CONVERSION_SCRIPT="/opt/muac/rtcd_routerlog.awk"
 
 # Directory to store files in Airtel Router format
-ARCHIVE_DIR="/var/log/atn_capture"
+ARCHIVE_DIR=/archives/captures/routerlog
 
-# File retention in days (used by cleanup script)
+# File retention days used by cleanup script (default: 7)
 RETENTION_DAYS=7
