Initial release to be tested in TDS

--- a/capture_convert/online/etc/sysconfig/atn_capture_convert.env
+++ b/capture_convert/online/etc/sysconfig/atn_capture_convert.env
@@ -4,14 +4,14 @@
 # Network interface to capture on
 NETWORK_INTERFACE="net3"
 
-# IP address to sniff
-RTCD_SNIFFED_ADDRESS="192.0.2.1"
+# IP address to filter on
+RTCD_SNIFFED_ADDRESS="57.250.136.74"
 
 # Path to the rtcd_routerlog.awk script
 AWK_CONVERSION_SCRIPT="/opt/muac/rtcd_routerlog.awk"
 
 # Directory to store files in Airtel Router format
-ARCHIVE_DIR=/archives/captures/routerlog
+ARCHIVE_DIR=/archives/captures
 
 # File retention days used by cleanup script (default: 7)
 RETENTION_DAYS=7
