Allow multiple IP addresses

--- a/capture_convert/online/etc/sysconfig/atn_capture_convert.env
+++ b/capture_convert/online/etc/sysconfig/atn_capture_convert.env
@@ -4,7 +4,8 @@
 # Network interface to capture on
 NETWORK_INTERFACE="net3"
 
-# IP address to filter on
+# IP address (or comma-separated list of addresses) to filter on
+# Example: RTCD_SNIFFED_ADDRESS="57.250.136.74,57.77.136.120"
 RTCD_SNIFFED_ADDRESS="57.250.136.74"
 
 # Path to the rtcd_routerlog.awk script
